# chunklab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  PHASES.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: CLAUDE.md  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  embedding.py  jsonutil.py  llm.py  logging.py  pricing.py  ratelimit.py  redis.py
backend/app/db/: base.py  engine.py  models_core.py  models_results.py  session.py  setup_db.py
backend/app/knowledge/: 00_what_is_chunklab.md  01_architecture.md  02_data_model.md  03_chunking_strategies.md  04_qa_generation_and_evaluation.md  05_retrieval_and_vector_search.md  10_faq.md  (+4 more)
backend/tests/: test_chunking.py  test_config.py  test_metrics.py  test_pricing_jsonutil.py
blog/: README.md  _TEMPLATE.md  index.html
docs/: API.md  ARCHITECTURE.md  CHUNKING.md  DATA_MODEL.md  DECISIONS.md  EVALUATION.md  SECURITY.md  SETUP.md  WALKTHROUGH.md  implementation.html  iteration_features.html  overview.html  retrieval_and_evaluation.html  walkthrough.html
frontend/: AGENTS.md  CLAUDE.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
infra/: README.md
infra/postgres/: init.sql
sample_docs/: README.md  benchmark_paul_graham_essay.txt  benchmark_wikipedia_large_language_model.txt  benchmark_wikipedia_retrieval-augmented_.txt  faq.md  product_spec.html  quarterly_metrics.csv  rag_handbook.md  recipes.md  terms_of_service.txt  the_lighthouse.txt
(+83 files in other folders)
